# PVZAI

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.toml  pvz.sln  pvz.vcxproj  pvz.vcxproj.filters  pyproject.toml
code/c++/: constants.h  machinecode.cpp  machinecode.h  memoryconfig.cpp  memoryconfig.h  memorylocator.cpp  memorylocator.h  pvz.cpp  pvz.h  pvzinterface.cpp  setup.py  util.cpp  util.h
code/old_code/: addresses.py  const.py  machinecode.py  main.py  pvz.py  util.py
code/python/: agent.py  main.py  model.py  pvzinterface.cp312-win_amd64.pyd  pvzinterface.cp39-win_amd64.pyd  pyproject.toml
code/python/temp.win-amd64-cpython-312/Release/: pvzinterface.cp312-win_amd64.exp
