[tool.poetry]
name = "pvz"
version = "0.1.0"
description = "A Reinforcement Learning AI which plays plants vs zombies"
authors = ["Dominic Vald"]
license = "tbd"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
readwritememory = "^0.1.5"
pymem = "^1.13.1"
psutil = "^6.0.0"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
